crates/cli/tests/snapshots/lib__check_test@arg_count_mismatch.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - /Users/christoph/code/nemo-lang/crates/cli/tests/check/arg_count_mismatch.nemo
input_file: crates/cli/tests/check/arg_count_mismatch.nemo
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
[31m[11] Error:[0m Mismatched arg count. Expected 1 argument, but got 3
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m6 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249mf[0m[38;5;249mu[0m[38;5;249mn[0m[38;5;249mc[0m(1, 2, 3)[38;5;249m;[0m
 [38;5;240m  │[0m       ────┬────  
 [38;5;240m  │[0m           ╰────── Mismatched arg count. Expected 1 argument, but got 3
[38;5;246m───╯[0m

[31m[11] Error:[0m Mismatched arg count. Expected 2 arguments, but got 3
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m7 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249mi[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m_[0m[38;5;249mr[0m[38;5;249me[0m[38;5;249mm[0m[38;5;249m_[0m[38;5;249ms[0m(1, 2, 3)[38;5;249m;[0m
 [38;5;240m  │[0m            ────┬────  
 [38;5;240m  │[0m                ╰────── Mismatched arg count. Expected 2 arguments, but got 3
[38;5;246m───╯[0m

Error: "Check failed with 2 errors"
