crates/cli/tests/snapshots/lib__check_test@cant_infer_empty_array.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - /Users/christoph/code/nemo-lang/crates/cli/tests/check/cant_infer_empty_array.nemo
input_file: crates/cli/tests/check/cant_infer_empty_array.nemo
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
[31m[17] Error:[0m Can't infer type of an empty array
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:2:1[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249ml[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[]
 [38;5;240m  │[0m           ─┬  
 [38;5;240m  │[0m            ╰── Can't infer type of an empty array
[38;5;246m───╯[0m

Error: "Check failed with 1 errors"
