crates/cli/tests/snapshots/lib__check_test@cant_infer_type_param.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - /Users/christoph/code/nemo-lang/crates/cli/tests/check/cant_infer_type_param.nemo
input_file: crates/cli/tests/check/cant_infer_type_param.nemo
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
[31m[17] Error:[0m Can't infer type of an empty array
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m11 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249ml[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249ms[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249mS[0m[38;5;249m [0m[38;5;249m{[0m[38;5;249m [0m[38;5;249ma[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m1[0m[38;5;249m0[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249mb[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[][38;5;249m [0m[38;5;249m}[0m[38;5;249m;[0m
 [38;5;240m   │[0m                           ─┬  
 [38;5;240m   │[0m                            ╰── Can't infer type of an empty array
[38;5;246m────╯[0m

[31m[26] Error:[0m Can't infer type parameter 'b'. Explicitly supply the instantiation
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m11 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249ml[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249ms[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0mS[38;5;249m [0m[38;5;249m{[0m[38;5;249m [0m[38;5;249ma[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m1[0m[38;5;249m0[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249mb[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m[[0m[38;5;249m][0m[38;5;249m [0m[38;5;249m}[0m[38;5;249m;[0m
 [38;5;240m   │[0m           ┬  
 [38;5;240m   │[0m           ╰── Can't infer type parameter 'b'. Explicitly supply the instantiation
[38;5;246m────╯[0m

[31m[17] Error:[0m Can't infer type of an empty array
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m12 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249mp[0m[38;5;249mo[0m[38;5;249ml[0m[38;5;249my[0m[38;5;249mF[0m[38;5;249m([0m[38;5;249m1[0m[38;5;249m0[0m[38;5;249m,[0m[38;5;249m [0m[][38;5;249m)[0m[38;5;249m;[0m
 [38;5;240m   │[0m             ─┬  
 [38;5;240m   │[0m              ╰── Can't infer type of an empty array
[38;5;246m────╯[0m

[31m[26] Error:[0m Can't infer type parameter 'b'. Explicitly supply the instantiation
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m12 │[0m [38;5;249m [0m[38;5;249m [0mpolyF[38;5;249m([0m[38;5;249m1[0m[38;5;249m0[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249m[[0m[38;5;249m][0m[38;5;249m)[0m[38;5;249m;[0m
 [38;5;240m   │[0m   ──┬──  
 [38;5;240m   │[0m     ╰──── Can't infer type parameter 'b'. Explicitly supply the instantiation
[38;5;246m────╯[0m

Error: "Check failed with 4 errors"
