crates/cli/tests/snapshots/lib__check_test@cant_return_from_global.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - /Users/christoph/code/nemo-lang/crates/cli/tests/check/cant_return_from_global.nemo
input_file: crates/cli/tests/check/cant_return_from_global.nemo
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
[31m[24] Error:[0m Can't 'return' from a global definition.
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249mg[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249mb[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249mg[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0mreturn 1
 [38;5;240m  │[0m            ────┬───  
 [38;5;240m  │[0m                ╰───── Can't 'return' from a global definition.
[38;5;246m───╯[0m

[31m[24] Error:[0m Can't 'return' from a global definition.
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m4 │[0m [38;5;249m [0m[38;5;249m [0mreturn x
 [38;5;240m  │[0m   ────┬───  
 [38;5;240m  │[0m       ╰───── Can't 'return' from a global definition.
[38;5;246m───╯[0m

Error: "Check failed with 2 errors"
