crates/cli/tests/snapshots/lib__check_test@lambda.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - /Users/christoph/code/nemo-lang/crates/cli/tests/check/lambda.nemo
input_file: crates/cli/tests/check/lambda.nemo
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
[31m[15] Error:[0m Type mismatch. Expected f32, but got i32
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m3 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249mr[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249mu[0m[38;5;249mr[0m[38;5;249mn[0m[38;5;249m [0m10[38;5;249m;[0m
 [38;5;240m  │[0m              ─┬  
 [38;5;240m  │[0m               ╰── Type mismatch. Expected f32, but got i32
[38;5;246m───╯[0m

[31m[15] Error:[0m Type mismatch. Expected i32, but got f32
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m5 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249mr[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249mu[0m[38;5;249mr[0m[38;5;249mn[0m[38;5;249m [0m10.0[38;5;249m;[0m
 [38;5;240m  │[0m            ──┬─  
 [38;5;240m  │[0m              ╰─── Type mismatch. Expected i32, but got f32
[38;5;246m───╯[0m

Error: "Check failed with 2 errors"
