crates/cli/tests/snapshots/lib__check_test@missing_field.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - "\\\\?\\C:\\Users\\creek\\code\\nemo-lang\\crates\\cli\\tests\\check\\missing_field.nemo"
input_file: crates/cli/tests/check/missing_field.nemo
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
[31m[14] Error:[0m Missing field. F.x was not provided
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:2:1[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m6 │[0m [38;5;249m [0m[38;5;249m [0mF[38;5;249m [0m[38;5;249m{[0m[38;5;249m [0m[38;5;249m}[0m
 [38;5;240m  │[0m   ┬  
 [38;5;240m  │[0m   ╰── Missing field. F.x was not provided
[38;5;246m───╯[0m

Error: "Check failed with 1 errors"
